# safety

./: README.md  pyproject.toml
safety/: create_smart_start_hira_print_format.py  hooks.py
safety/controllers/: notifications.py
safety/desktop_icon/: safety.json
safety/fixtures/: custom_docperm.json  document_register_class.json  document_register_subclass.json  role.json  safety_incident_classification.json
safety/public/CSS/: Emergency Drill Schedule.css  Safety template CSS.css  injuries_page.css
safety/safety/: utils.py
safety/safety/doctype/action_management/: action_management.js  action_management.json  action_management.py  test_action_management.py
safety/safety/doctype/body_part/: body_part.json  body_part.py
safety/safety/doctype/body_part_impacted/: body_part_impacted.js  body_part_impacted.json  body_part_impacted.py  test_body_part_impacted.py
safety/safety/doctype/branch_multiselect/: branch_multiselect.json  branch_multiselect.py
safety/safety/doctype/classify_incident/: classify_incident.js  classify_incident.json  classify_incident.py  test_classify_incident.py
safety/safety/doctype/classify_the_task/: classify_the_task.js  classify_the_task.json  classify_the_task.py  test_classify_the_task.py
safety/safety/doctype/classify_type_of_incident/: classify_type_of_incident.json  classify_type_of_incident.py
safety/safety/doctype/classifying_injuries/: classifying_injuries.json  classifying_injuries.py
safety/safety/doctype/equipment/: equipment.json  (+1 more)
safety/setup/: add_employee_doclinks.py
safety/workspace_sidebar/: safety.json
(+366 files in other folders)
