[project]
name = "safety"
authors = [
    { name = "BuFf0k", email = "buff0k@gmail.com"}
]
version = "16.0.0"
description = "Safety Incident Management System for Mining"
requires-python = ">=3.14"
readme = "README.md"
#dynamic = ["version"]
dependencies = [
    "frappe~=16.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
frappe = ">=16.0.0-dev,<17.0.0"
erpnext = ">=16.0.0-dev,<17.0.0"
hrms = ">=15.6.0-dev,<17.0.0"
